--- a/Neutral/templates/login.html
+++ b/Neutral/templates/login.html
@@ -1,8 +1,108 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='login.css') }}">
+
+    {% if title %}
+        <title>Neutral - {{ title }}</title>
+    {% else %}
+        <title>Neutral</title>
+    {% endif %}
+</head>
+<body>
+    <main role="main" class="container">
+        <div class="form-row">
+            <div class="col-md-5">
+                <div class="content-section">
+                    <form method="POST" action="">
+                        {{ form.hidden_tag() }}
+                        <img src="static/avatar.png" class="avatar">
+                        <fieldset class="form-group">
+                            <legend class="border-bottom border-dark mb-2">Log In</legend>
+                            {% with messages = get_flashed_messages(with_categories=true) %}
+                                {% if messages %}
+                                    {% for category, message in messages %}
+                                        <div class="alert alert-{{ category }}">
+                                        {{ message }}
+                                        </div>
+                                    {% endfor %}
+                                {% endif %}
+                            {% endwith %}
+                            <div class="form-group mt-1">
+                                {{ form.email.label(class="form-control-label") }}
+                                {% if form.email.errors %}
+                                    {{ form.email(class="form-control is-invalid") }}
+                                    <div class="invalid-feedback">
+                                        {% for error in form.email.errors %}
+                                            <span>{{ error }}</span>
+                                        {% endfor %}
+                                    </div>
+                                {% else %}
+                                    {{ form.email(class="form-control", placeholder="Enter email") }}
+                                {% endif %}
+                            </div>
+                            <div class="form-group">
+                                {{ form.password.label(class="form-control-label") }}
+                                {% if form.password.errors %}
+                                    {{ form.password(class="form-control is-invalid") }}
+                                    <div class="invalid-feedback">
+                                        {% for error in form.password.errors %}
+                                            <span>{{ error }}</span>
+                                        {% endfor %}
+                                    </div>
+                                {% else %}
+                                    {{ form.password(class="form-control margin-password", placeholder="Enter password") }}
+                                {% endif %}
+                            </div>
+                            <small>
+                                <a class="link-color" href="{{ url_for('reset_request') }}">Forgot Password?</a>
+                            </small>
+                            <div class="form-check mt-2">
+                                {{ form.remember(class="form-check-input") }}
+                                {{ form.remember.label(class="form-check-label") }}
+                            </div>
+                        </fieldset>
+                        <div class="form-group">
+                            {{ form.submit(class="btn btn-outline-info sign-up-btn") }}
+                        </div>
+                    </form>
+                    <div class="border-top border-dark pt-3">
+                        <small>
+                            Need An Account?<a class="ml-2 link-color" href="{{ url_for('register') }}">Sign Up Now!</a>
+                        </small>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="title">
+                    <img src="static/background-black.png" class="background-black">
+                    <img class="logo" src="static/logo.png">
+
+                    <!--<h1>NEUTRAL</h1>-->
+                    <p>NEUTRAL is a comprehensive food and fitness manager<br>that makes it easy for you to track your food and exercise<br> as well as maintain a healthy nutritional balance.</p>
+                    <h2>Food, Fitness and Fun, Let’s Get It Done!</h2>
+                </div>
+            </div>
+        </div>
+    </main>
+</body>
+</html>
+
+
+
+
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
 <script src="static/testchart.js"></script>
 <canvas id="chDonut1"></canvas>-->
 
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -12,19 +112,28 @@
             <div class="title"> 
                 <img src="static/background-black.png" class="background-black">
                 
-                <img class="logo" src="static/logo.png">
+                <img class="logo" src="static/logo.png">-->
 
                 <!--<h1>NEUTRAL</h1>-->
-                <p>NEUTRAL is a comprehensive food and fitness manager<br>that makes it easy for you to track your food and exercise<br> as well as maintain a healthy nutritional balance.</p>
+                <!--<p>NEUTRAL is a comprehensive food and fitness manager<br>that makes it easy for you to track your food and exercise<br> as well as maintain a healthy nutritional balance.</p>
                 <h2>Food, Fitness and Fun, Let’s Get It Done!</h2>
             </div>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ category }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
             <div class="loginbox">
                 <form method = "POST" action="">
                     {{ form.hidden_tag() }}
                     <img src="static/avatar.png" class="avatar">
                         <h1>Login</h1>
                         <div class="form-group">
-                            {{ form.email.label(class="form-control-label")}} <!--prints out the email label--> 
+                            {{ form.email.label(class="form-control-label")}}
                             {% if form.email.errors %}
                                 {{ form.email(class="form-control form-control-lg is-invalid")}}
                                 <div class='invalid-feedback'>
@@ -35,11 +144,11 @@
                                     {% endfor %}
                                 </div>
                             {% else %}
-                                {{ form.email(class="form-control form-control-lg", placeholder="Enter your email")}} <!--prints out the email field--> 
+                                {{ form.email(class="form-control form-control-lg", placeholder="Enter your email")}}
                             {% endif %}
                         </div>
                         <div class="form-group">
-                            {{ form.password.label(class="form-control-label")}} <!--prints out the password label--> 
+                            {{ form.password.label(class="form-control-label")}}
                             {% if form.password.errors %}
                                 {{ form.password(class="form-control form-control-lg is-invalid")}}
                                 <div class='invalid-feedback'>
@@ -50,7 +159,7 @@
                                     {% endfor %}
                                 </div>
                             {% else %}
-                                {{ form.password(class="form-control form-control-lg", placeholder="Enter your password")}} <!--prints out the email field--> 
+                                {{ form.password(class="form-control form-control-lg", placeholder="Enter your password")}}
                             {% endif %}
                         </div>
                         <div class="form-group">
@@ -70,7 +179,7 @@
                 </form>               
             </div>           
         </body>
-</html>
+</html>-->
 
     
 
