account page done

--- a/Neutral/templates/home.html
+++ b/Neutral/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+<!--{% extends "layout.html" %}
 
 {% block content %}
 <body>
@@ -78,4 +78,4 @@
 
 {% block extra %}
     <h1>hello</h1>
-{% endblock extra%}
+{% endblock extra%}-->
