--- a/Neutral/static/main.css
+++ b/Neutral/static/main.css
@@ -1,4 +1,50 @@
-*{
+body {
+    background: #fafafa;
+    color: #333333;
+    margin-top: 5rem;
+  }
+  
+  .bg-color {
+    background-color: rgb(156, 217, 207);
+  }
+
+.navbar-brand img{
+    height : 3rem;
+    width:9rem;
+    object-fit: contain;
+}
+
+  .site-header .navbar-nav .nav-link {
+    color: black
+  }
+  
+  .site-header .navbar-nav .nav-link:hover {
+    color: darkslategray;
+  }
+  
+  .site-header .navbar-nav .nav-link.active {
+    font-weight: 500;
+  }
+
+  
+  .account-img {
+    height: 125px;
+    width: 125px;
+    margin-right: 20px;
+    margin-bottom: 16px;
+    margin-top:2rem;
+  }
+  
+  .account-heading {
+    font-size: 2.5rem;
+    margin-top:2rem;
+  }
+  
+.content-section{
+    margin:2rem;
+}
+
+/*{
     margin:0;
     padding:0;
     box-sizing:border-box;
@@ -93,7 +139,7 @@ nav ul li:nth-child(4){
     animation-delay: 1.5s;
 }*/
 
-nav ul li a{
+/*nav ul li a{
     padding: 2rem;
     margin: 0rem 1rem;
     position: relative;
@@ -172,7 +218,14 @@ nav ul li img{
     width:20px;
 }
 
-
-
-
+.account-img {
+    height: 125px;
+    width: 125px;
+    margin-right: 20px;
+    margin-bottom: 16px;
+  }
+  
+  .account-heading {
+    font-size: 2.5rem;
+  }*/
 
