--- a/Neutral/templates/foodreco.html
+++ b/Neutral/templates/foodreco.html
@@ -1,21 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Food Recommendation</title>
-</head>
-<body>
-    <h1>Tick if you like the food!</h1>
-    <form action = "oodreco" method = "POST">
-        {% for name in names_list %}
-            {{name}}
-            <input type = "checkbox" value = "{{loop.index}}" name="mycheckbox">
-            <br>
+{% extends "bootstrap/base.html" %}
+{% import "bootstrap/wtf.html" as wtf%}
+{% block styles %}
+{{super()}}
+<link rel="stylesheet"
+      href="{{url_for('.static', filename='foodreco.css')}}">
+{% endblock %}
+
+{% block content %}
+<div class="myheader">
+        <h1>Food Recommendation Quiz</h1>
+        <h4>Tick the foods you enjoy eating! Our machine learning model will recommend some foods for you.</h4>
+</div>
+<div class="container">
+    <form action="{{url_for('displayFoodReco')}}" method = "POST">
+        {% for item in names_list %}
+        <div class="food-card col-sm">
+            <img src="{{item.link}}" alt="picture" class="food">
+            <div class="food-card-bod">
+                <p>{{item.name}}</p>
+                <input type = "checkbox" value = "{{loop.index}}" name="mycheckbox">
+
+            </div>
+        </div>
         {% endfor %}
-    <input type = "submit">
+        <button type="submit" class="btn btn-primary btn-lg submit">Submit</button>
     </form>
-
-
-
-</body>
-</html>
+</div>
+{% endblock %}
