--- a/Neutral/static/main.css
+++ b/Neutral/static/main.css
@@ -1,7 +1,10 @@
+html{
+    font-family: 'Rockwell', sans-serif;
+}
+
 body {
     background: #fafafa;
-    color: #333333;
-    margin-top: 5rem;
+    color: black;
   }
   
   .bg-color {
@@ -13,19 +16,6 @@ body {
     width:9rem;
     object-fit: contain;
 }
-
-  .site-header .navbar-nav .nav-link {
-    color: black
-  }
-  
-  .site-header .navbar-nav .nav-link:hover {
-    color: darkslategray;
-  }
-  
-  .site-header .navbar-nav .nav-link.active {
-    font-weight: 500;
-  }
-
   
   .account-img {
     height: 125px;
@@ -44,18 +34,99 @@ body {
     margin:2rem;
 }
 
-/*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
+.img-valign {
+    vertical-align: middle;
+    height:20px;
+    width:20px;
+
+}.dropdown:hover>.dropdown-menu{
+    display: block;
 }
 
-html{
-    font-size:11px;
-    font-family: 'Rockwell', sans-serif;
+.navbarcolor{
+    color: black;
 }
 
 
+
+/*.nav-link{
+    list-style: none;
+    padding: 1rem;
+    margin: 0rem 1rem;
+    position: relative;
+    letter-spacing: 2px;
+    display: block;
+    font-weight: bolder;
+    font-size: small;
+    transform:translateX(100rem);
+    animation: slideIn .5s forwards;
+}
+
+@keyframes slideIn{
+    from{
+
+    }
+    to{
+        transform: translateX(0);
+    }
+}
+
+.dropdown-menu{
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.nav-link:hover {color: grey;}
+.nav-link:hover .dropdown-menu{
+    display:block;
+}
+
+
+.nolist a{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.nolist a:hover {background-color: #ddd;}
+
+nav-link:hover .nolist{display: block;}*/
+
+
+/*.style-nav::before,
+.style-nav::after{
+    content:'';
+    position: absolute;
+    width:100%;
+    height:2px;
+    background-color:rgba(166,63,63);
+    left:0;
+    transform: scaleX(0);
+    transition: all 0.25s;
+}
+
+.style-nav::before{
+    top:0;
+    transform-origin:left;
+}
+
+.style-nav::after{
+    bottom:0;
+    transform-origin:right;
+}
+
+.style-nav:hover::before,
+.style-nav:hover::after{
+    transform: scaleX(1);
+}
+
+*/
+
+/*
 body{
     overflow-x: hidden;
 }
@@ -112,17 +183,6 @@ nav{
 }
 
 
-nav ul{
-    display: flex;
-}
-
-nav ul li{
-    list-style: none;
-    margin:0;
-    transform:translateX(100rem);
-    animation: slideIn .5s forwards;
-}
-
 nav ul li:nth-child(1){
     animation-delay: 0s;
 }
@@ -139,63 +199,13 @@ nav ul li:nth-child(4){
     animation-delay: 1.5s;
 }*/
 
-/*nav ul li a{
-    padding: 2rem;
-    margin: 0rem 1rem;
-    position: relative;
-    letter-spacing: 2px;
-    display: block;
-    font-weight: bolder;
-}
-
-nav ul li a::before,
-nav ul li a::after{
-    content:'';
-    position: absolute;
-    width:100%;
-    height:2px;
-    background-color:rgba(166,63,63);
-    left:0;
-    transform: scaleX(0);
-    transition: all 0.25s;
-}
-
-nav ul li a::before{
-    top:0;
-    transform-origin:left;
-}
-
-nav ul li a::after{
-    bottom:0;
-    transform-origin:right;
-}
-
-nav ul li a:hover::before,
-nav ul li a:hover::after{
-    transform: scaleX(1);
-}
-
-@keyframes slideIn{
-    from{
-
-    }
-    to{
-        transform: translateX(0);
-    }
-}
+/*
 
 nav ul li ul a::before,
 nav ul li ul a::after{
     display:none;
 }
 
-nav ul li ul{
-    display:none;
-    position: absolute;
-    background-color: rgba(156,217,207);
-    border-radius: 0px 0px 4px 4px;
-    padding-top: 1.2rem;
-}
 
 nav ul li ul li{
     padding-right:1rem;
@@ -209,23 +219,5 @@ nav ul li:hover ul{
 nav ul li ul li:hover{
     background-color: rgba(106,167,157);
 }
-.img-valign {
-    vertical-align: middle;
-}
 
-nav ul li img{
-    height:20px;
-    width:20px;
-}
-
-.account-img {
-    height: 125px;
-    width: 125px;
-    margin-right: 20px;
-    margin-bottom: 16px;
-  }
-  
-  .account-heading {
-    font-size: 2.5rem;
-  }*/
 
