--- a/Neutral/templates/layout.html
+++ b/Neutral/templates/layout.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
     {% if title %}
@@ -17,35 +17,100 @@
     {% endif %}
 </head>
 <body>
-    <header class="site-header">
-      <nav class="navbar navbar-expand-md navbar-light bg-color fixed-top">
-        <div class="container">
-          <a class="navbar-brand" href="{{ url_for('home') }}"><img src="static/logo.png"></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarToggle">
-            <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
-              <a class="nav-item nav-link" href="{{ url_for('home') }}">About</a>
-            </div>
-            <!-- Navbar Right Side -->
-            <div class="navbar-nav">
-              {% if current_user.is_authenticated %}
-                <a class="nav-item nav-link" href="{{ url_for('home') }}">New Post</a>
-                <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
-                <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
-              {% else %}
-                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
-              {% endif %}
-            </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-color">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class = "navbar-brand" href="{{ url_for('home') }}"><img src="static/logo.png"></a>
+        </li>
+        <li class="nav-item">
+          <a class="navbarcolor nav-link" href="{{ url_for('home') }}">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Food
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Diary</a>
+            <a class="dropdown-item" href="#">Search Food</a>
+            <a class="dropdown-item" href="#">Recommend Food</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Fitness
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+            <a class="dropdown-item" href="#">Diary</a>
+            <a class="dropdown-item" href="#">Workout</a>
+            <a class="dropdown-item" href="#">Exercises</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('account') }}">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+            <!--<div class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('home') }}"><img class='img-valign' src="static/home.png"/> Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="{{ url_for('home') }}" id="navbarDropDown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class='img-valign' src="static/food.png"/>
+                   Food
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                  <a class="dropdown-item" href="#">Diary</a>
+                  <a class="dropdown-item" href="#">Search Food</a>
+                  <a class="dropdown-item" href="#">Recommend Food</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="{{ url_for('home') }}" id="navbarDropDown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class='img-valign' src="static/fitness.png"/>
+                   Fitness
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                  <a class="dropdown-item" href="#">Diary</a>
+                  <a class="dropdown-item" href="#">Workout</a>
+                  <a class="dropdown-item" href="#">Fitness</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('account') }}"><img class='img-valign' src="static/default profile pic.png"/> Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('logout') }}"><img class='img-valign' src="static/logout.png"/> Logout</a>
+              </li>-->
+              <!--original-->
+              <!--<a class="nav-item nav-link style-nav" href="{{ url_for('home') }}"><img class='img-valign' src="static/home.png"/> Home</a>
+              <a class="nav-item nav-link style-nav" href="{{ url_for('home') }}"><img class='img-valign' src="static/food.png"/> Food</a>
+                <div class="nolist">
+                  <a href="{{ url_for('home') }}">Diary</a></li>
+                  <a href="#">Search Food</a></li>
+                  <a href="#">Recommend Food</a></li>
+                </div>
+              <a class="nav-item nav-link style-nav" href="{{ url_for('home') }}"><img class='img-valign' src="static/fitness.png"/> Fitness</a>
+                <div class="nolist">
+                  <a href="">Diary</a></li>
+                  <a href="">Workout</a></li>
+                  <a href="">Exercise</a></li>
+                </div>-->
+              <!--<a class="nav-item nav-link style-nav" href="{{ url_for('account') }}"><img class='img-valign' src="static/default profile pic.png"/> Profile</a>
+              <a class="nav-item nav-link style-nav" href="{{ url_for('logout') }}"><img class='img-valign' src="static/logout.png"/> Logout</a>-->
+              <!--</div>-
           </div>
         </div>
       </nav>
-    </header>
+    </header>-->
     <main role="main" class="container">
-          <!--{% with messages = get_flashed_messages(with_categories=true) %}
+          {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category, message in messages %}
                 <div class="alert alert-{{ category }}">
@@ -53,11 +118,9 @@
                 </div>
               {% endfor %}
             {% endif %}
-          {% endwith %}-->
+          {% endwith %}
           {% block content %}{% endblock %}
     </main>
-
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -65,5 +128,3 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
-
-
