--- a/Neutral/templates/foodRecord.html
+++ b/Neutral/templates/foodRecord.html
@@ -5,8 +5,11 @@
 {% block styles %}
 {{super()}}
 <meta charset="utf-8">
-        <title>Food Record</title>
-        <link rel="stylesheet" type="text/css" href="static/search.css">
+<title>Food Record</title>
+<link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+<script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>   
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="static/search.css">
 {% endblock %}
 
 {% block content %}
@@ -15,7 +18,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css" />
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 
 <!-- Edit Modal -->
     <div class="modal fade" id="editmodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -351,10 +353,52 @@
                     },
                 });
 
-        </script>
-        
+        </script>        
     </div>
 
-    
+        <div class="container background" style="margin-top:3rem">
+
+        <div class="food-intake">
+            <h1 class="text-center">Food Intake Breakdowns</h1>
+                <div class="col center-block text-center">
+                <form action="{{ url_for('displayFoodRecord') }}" method="post">
+                <input type="submit" name="action" value="Nutrients"class="btn btn-primary btn-lg active">
+                <input type="submit" name="action" value="Calories" class="btn btn-primary btn-lg active">
+                </form>
+                </div>
+        </div>  
+            <h1 class="text-center"><u>{{header}}</u></h1>
+        <div class='row'>
+            <div class="ct-chart ct-golden-section"></div>
+            </div>
+                <script type="text/javascript">
+                    var values = {{ values|tojson }};
+                    var labels = {{ labels|tojson}};
+                    var data = {labels:labels,
+                                series: values};
+                    var options = {
+                        donut: true,
+                        donutWidth:'55%',
+                        showLabel:true,
+                        labelDirection: 'explode'
+                    };
+                    var responsiveOptions = [
+                    ['screen and (min-width: 640px)', {
+                    chartPadding: 50,
+                    labelOffset: 50,
+                    labelDirection: 'explode',
+                    labelInterpolationFnc: function(value) {
+                        return value;
+                    }
+                    }],
+                    ['screen and (min-width: 1024px)', {
+                    labelOffset:50,
+                    chartPadding:20
+                    }]
+                    ];
+                    new Chartist.Pie('.ct-chart', data, options, responsiveOptions);
+                </script>
+        </div>
+        </div>
 
 {% endblock %}
