--- a/Neutral/templates/layout.html
+++ b/Neutral/templates/layout.html
@@ -30,7 +30,7 @@
           <a class="navbarcolor nav-link" href="{{ url_for('home') }}">Home</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="{{ url }}" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Food
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -110,7 +110,7 @@
       </nav>
     </header>-->
     <main role="main" class="container">
-          {% with messages = get_flashed_messages(with_categories=true) %}
+          <!--{% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category, message in messages %}
                 <div class="alert alert-{{ category }}">
@@ -118,7 +118,7 @@
                 </div>
               {% endfor %}
             {% endif %}
-          {% endwith %}
+          {% endwith %}-->
           {% block content %}{% endblock %}
     </main>
     <!-- Optional JavaScript -->
